# point-cloud-cutaway

./: .gitignore  Cargo.toml
src/: input.rs  main.rs
src/shaders/: drawing.frag  drawing.vert  main.frag  main.vert  single_pixel.frag  single_pixel.vert
