[package]
name = "point-cloud-cutaway"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
glium = "0.32"
las = { version = "0.7", features = ["laz"] }
# nalgebra-glm = "0.17"
glam = "0.21"
maplit = "1.0.2"
rayon = "1.5.3"
clap = { version = "3.2.17", features = ["derive"] }
