[package]
name = "point-cloud-cutaway"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
glium = "0.32"
las = { version = "0.7", features = ["laz"] }
glam = "0.21"
maplit = "1.0.2"
rayon = "1.5.3"
clap = { version = "3.2.17", features = ["derive"] }
typenum = "1.15.0"
egui_glium = "0.19.0"
egui = "0.19.0"
puffin = "0.13.3"
puffin_http = "0.10.0"
rfd = "0.10"
image = "0.24.4"
kd-tree = "0.4.2"
line_drawing = "1.0.0"
tempfile = "3.3.0"
